Bug 31773 - [SNB] System hang occurs while booting with rev07 machines with latest intel X drivers and disabling BLIT engine helped.
Summary: [SNB] System hang occurs while booting with rev07 machines with latest intel ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-19 11:49 UTC by Manjeet Singh
Modified: 2017-07-24 23:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg logs attached (161.16 KB, application/octet-stream)
2010-11-19 11:49 UTC, Manjeet Singh
no flags Details
xorg.log file attached (23.74 KB, application/octet-stream)
2010-11-19 11:50 UTC, Manjeet Singh
no flags Details

Description Manjeet Singh 2010-11-19 11:49:02 UTC
This is occurring because of a  HW bug with older revisions. 

If lspci -n shows rev 07 for the cpu and VGA card (something like 8086:0104(rev 07), 8086:0116(rev 07)} then system hangs during boot

Hardware: Huron River UMA
OS- Quicweb (fedora based linux).
Kernel- 2.6.37-rc1-next-20101110 with patch - http://git.kernel.org/?p=linux/kernel/git/ickle/drm-intel.git;a=commitdiff;h=5588978882b5f4b81169bd7f9bc941e3a12ee8ba

X driver- latest intel X drivers(git files taken on Nov 10)

Steps to reproduce:
Boot to Linux (fedora based)
System just boots up till cursor on the screen and failed to load the home screen

see the attached dmesg and Xorg.
Comment 1 Manjeet Singh 2010-11-19 11:49:46 UTC
Created attachment 40416 [details]
dmesg logs attached
Comment 2 Manjeet Singh 2010-11-19 11:50:19 UTC
Created attachment 40417 [details]
xorg.log file attached
Comment 3 Chris Wilson 2010-12-05 03:44:20 UTC
commit c2fac6ca108734dd9566570b15f01cc476fa53dc
Author: Matthias Hopf <mhopf@suse.de>
Date:   Fri Nov 19 04:29:57 2010 +0100

    Don't use hardware acceleration on Sandybridge rev 07 hardware or earlier.
    
    This is known to lock up the GPU even with the workaround in place.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=31773
    Signed-off-by: Matthias Hopf <mhopf@suse.de>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.